# oblivious-linear-scan-map

./: .gitignore  Cargo.toml  bench.sh  bench1000.sh  bench1000000.sh  bench1m.sh  bench2m.sh  bench3m.sh  justfile
benches/: dot.rs  is_zero.rs  xor_keys.rs
configs/: party1.toml
examples/: bench-linear-scan.rs  write.nr  write.rs
examples/bench-linear-scan/: linear_map.rs  main.rs
examples/configs/: party1.toml  party2.toml  party3.toml
noir/compiled_circuits/: oblivious_map_read.json  oblivious_map_write.json
noir/oblivious_map/: Nargo.toml
noir/oblivious_map/src/: hash.nr  lib.nr  merkle.nr
noir/oblivious_map_read/: Prover.toml
noir/oblivious_map_read/src/: main.nr
noir/oblivious_map_write/: Nargo.toml  Prover.toml
noir/oblivious_map_write/src/: main.nr
src/: base.rs  cosnark.rs  groth16.rs  insert.rs  insert_or_update.rs  lib.rs  local.rs  mpc.rs  plain.rs  prune.rs  read.rs  rep3.rs  update.rs
