[package]
name = "oblivious-linear-scan-map"
version = "0.1.0"
edition = "2024"

[features]
default = []
local = []

[dependencies]
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
co-circom = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-noir = { version = "0.6.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
co-noir-to-r1cs = { version = "0.1.0", git = "https://github.com/TaceoLabs/CoNoir-to-R1CS", rev = "cb40e6b" }
eyre = "0.6.12"
itertools = { version = "0.14" }
mpc-core = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb" }
mpc-net = { version = "0.4.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "9bdad2793e3ca7f82a291f9e9932cf877ef657eb", features = ["local"] }
rand = { version = "0.8" }
rayon = { version = "1.11" }
tracing = "0.1.40"

[dev-dependencies]
clap = { version = "4", features = ["derive", "env"] }
criterion = "0.5"
figment = { version = "0.10.19", features = ["toml", "env"] }
rand_chacha = "0.3"
rustls = "0.23"
serde = { version = "1.0.193", features = ["derive", "rc"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "bench-linear-scan"
required-features = ["local"]

[[bench]]
name = "is_zero"
harness = false

[[bench]]
name = "xor_keys"
harness = false

[[bench]]
name = "dot"
harness = false
